force-app/main/default/objects/FieldMasterByAccount__c/FieldMasterByAccount__c.object-meta.xml
<CustomObject>
    <label>個社別項目マスタ</label>
    <nameField>
        <label>個社別項目マスタ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>