force-app/main/default/objects/FieldMasterByAccount__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <label>データ型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>テキスト</fullName>
            </value>
            <value>
                <fullName>数値</fullName>
            </value>
            <value>
                <fullName>日付</fullName>
            </value>
            <value>
                <fullName>通貨</fullName>
            </value>
            <value>
                <fullName>選択リスト</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>