force-app/main/default/objects/FieldMasterByAccount__c/fields/IsRealEstateField__c.field-meta.xml
<CustomField>
    <fullName>IsRealEstateField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>物件</label>
    <type>Checkbox</type>
</CustomField>