force-app/main/default/objects/FieldMasterByAccount__c/fields/PickList__c.field-meta.xml
<CustomField>
    <fullName>PickList__c</fullName>
    <inlineHelpText>以下形式で選択肢リストの値を設定してください。
例)A;B;C;D</inlineHelpText>
    <label>選択リスト値</label>
    <length>255</length>
    <type>Text</type>
</CustomField>