force-app/main/default/objects/FieldMasterByAccount__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <label>表示順</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>