force-app/main/default/objects/FieldMasterByAccount__c/validationRules/DoNotChangeDataType.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotChangeDataType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   NOT( ISNEW() ),
   ISCHANGED( DataType__c )
)</errorConditionFormula>
    <errorDisplayField>DataType__c</errorDisplayField>
    <errorMessage>データ型は変更できません。新しくレコードを作成してください。</errorMessage>
</ValidationRule>