force-app/main/default/objects/FieldMasterByAccount__c/validationRules/DoNotChangeInputRule.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotChangeInputRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   NOT( ISNEW() ),
   ISCHANGED(  InputRule__c  )
)</errorConditionFormula>
    <errorDisplayField>InputRule__c</errorDisplayField>
    <errorMessage>入力規則は変更できません。新しくレコードを作成してください。</errorMessage>
</ValidationRule>