force-app/main/default/objects/FieldMasterByAccount__c/validationRules/DoNotChangeIsDecisionApplicationField.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotChangeIsDecisionApplicationField</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   NOT( ISNEW() ),
   ISCHANGED(  IsDecisionApplicationField__c  )
)</errorConditionFormula>
    <errorDisplayField>IsDecisionApplicationField__c</errorDisplayField>
    <errorMessage>決裁申請は変更できません。新しくレコードを作成してください。</errorMessage>
</ValidationRule>