force-app/main/default/objects/FieldMasterByAccount__c/validationRules/DoNotChangeIsRealEstateField.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotChangeIsRealEstateField</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   NOT( ISNEW() ),
   ISCHANGED(  IsRealEstateField__c  )
)</errorConditionFormula>
    <errorDisplayField>IsRealEstateField__c</errorDisplayField>
    <errorMessage>物件は変更できません。新しくレコードを作成してください。</errorMessage>
</ValidationRule>