force-app/main/default/objects/FieldMasterByAccount__c/validationRules/DoNotChangePickList.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotChangePickList</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   NOT( ISNEW() ),
   ISCHANGED(  PickList__c  )
)</errorConditionFormula>
    <errorDisplayField>PickList__c</errorDisplayField>
    <errorMessage>選択リスト値は変更できません。新しくレコードを作成してください。</errorMessage>
</ValidationRule>